Actualizacion de inner join ya funcionales

--- a/web/plantilla/plantilla.xhtml
+++ b/web/plantilla/plantilla.xhtml
@@ -42,7 +42,8 @@
                             </p:submenu>
                             
                             <p:submenu label="Catalogo de Cuentas" icon="ui-icon-pencil">
-                                <p:menuitem value="Listado de Cuentas" url="#" icon="ui-icon-arrowreturnthick-1-w"/>
+                                <p:menuitem value="Listado de Cuentas" outcome="/views/Cuenta/Cuenta" icon="ui-icon-arrowreturnthick-1-w"/>
+                                <p:menuitem value="Saldo de cuentas" outcome="/views/Saldos/Saldo" icon="ui-icon-arrowreturnthick-1-w"/>
                             </p:submenu>
                             
                             <p:submenu label="Estados Financieros" icon="ui-icon-pencil">
