Avance vista Comprobante (tabla) de transaccion

--- a/web/plantilla/plantilla.xhtml
+++ b/web/plantilla/plantilla.xhtml
@@ -37,8 +37,8 @@
                                 <p:menuitem value="Ver/Editar" url="#" icon="ui-icon-arrowreturnthick-1-w" />
                             </p:submenu>
 
-                            <p:submenu label="Ventas" icon="ui-icon-pencil">
-                                <p:menuitem value="Facturar" url="#" icon="ui-icon-arrowreturnthick-1-w"/>
+                            <p:submenu label="Transaccion" icon="ui-icon-transferthick-ew">
+                                <p:menuitem value="Nueva" outcome="/views/Comprobante/Comprobante" icon="ui-icon-plusthick"/>
                             </p:submenu>
                             
                             <p:submenu label="Catalogo de Cuentas" icon="ui-icon-pencil">
