Balance de comprobacion agregado.

--- a/web/plantilla/plantilla.xhtml
+++ b/web/plantilla/plantilla.xhtml
@@ -51,7 +51,7 @@
                             </p:submenu>
                             
                              <p:submenu label="Reportes" icon="ui-icon-print">
-                                <p:menuitem value="Ver/Editar" url="#" icon="ui-icon-arrowreturnthick-1-w" />
+                                <p:menuitem value="Balance de Comprobacion" outcome="/views/Reporteria/BalanceCompr" icon="ui-icon-arrowreturnthick-1-w" />
                             </p:submenu>
                             
                         </p:menubar>
